<?xml version="1.0"?>
<package format="2">
  <name>road_boundary</name>
  <version>1.0.0</version>
  <description>
    TODO road_boundary description
  </description>

  <author email="linh.nguyen@enway.ai">Linh Nguyen</author>
  <maintainer email="linh.nguyen@enway.ai">Linh Nguyen</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>enway_helper</depend>
  <depend>libopencv-dev</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

</package>
